<resources>
    <string name="app_name">高效加载图片</string>
    <string name="load_bitmap">加载压缩图</string>
    <string name="handle_concurency">ListView 并发加载图片</string>
    <string name="cache_bitmap">内存(LruCache)/硬盘(DiskLruCache)</string>
    <string name="cfg_change">处理配置改变(如屏幕旋转)</string>
    <string name="manage_memory">Android 2.3.3  及以下引用计数法控制 Bitmap 内存</string>
    <string name="option_inbitmap">inBitmap 选项</string>
    <string name="view_pager_ui">ViewPager 加载图片</string>
    <string name="view_grid">GridView 加载图片</string>
</resources>
